<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selected_product"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/product_Text_View"
         />

    <TextView
        android:id="@+id/total_amount"
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Total_Text_View"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:weightSum="3">


        <Button
            android:id="@+id/one_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/one_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/two_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/two_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/three_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/three_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:weightSum="3">


        <Button
            android:id="@+id/four_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/four_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/five_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/five_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/six_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/six_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:weightSum="3">

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/seven_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/eight_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/eight_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/nine_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/nine_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:weightSum="3">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/clear_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/zero_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/zero_btn"
            android:layout_weight="1"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/buy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buy" />
    </LinearLayout>
    <TextView
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/quantity_text"
        />
<ListView
    android:id="@+id/inventory_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>


</LinearLayout>